# Dot-Boxes

./: .gitignore
Notebooks/: environment.ipynb
docs/: Attempt1.txt  Chapter2.txt  Oberservation.txt  experiments_todo.md
paper/: README.md  latexmkrc  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib
src/: evaluate_for_paper.py  main.py  play_alphazero.py  play_vs_agent.py  simulate_and_record.py
src/agents/: AlphaBetaAgent.py  AlphaZeroAgent.py  AlphaZeroBitAgent.py  AlphaZeroCppAgent.py  GreedyAgent.py  HumanAgent.py  MCTSAgent.py  MCTSTrainer.py  MinMaxAgent.py  RandomAgent.py  agent.py
src/cpp/: CMakeLists.txt  README.md  main.cpp  server.cpp
src/cpp/agents/: AlphaZeroBitAgent.cpp  AlphaZeroBitAgent.h
src/cpp/env/: BitBoardEnv.cpp
src/cpp/include/: BitBoardEnv.h  FastBitSet.h  ValueEval.h
src/cpp/models/: AlphaZeroBitNet.h  AlphaZeroCNNNet.h  PatchNet.h
src/cpp/train/: AlphaZeroTrain.cpp  AlphaZeroTrain.h  InferenceServer.h  ModelHandle.h  ReplayBuffer.h  SelfPlayWorker.h  SymmetryAugmentation.h  TrainConfig.h
src/cpp/training_config/: _2x2.cpp  _3x3.cpp  _4x3.cpp  _5x5.cpp  _5x5_cnn.cpp  _5x5_cnn_kaggle.cpp  _5x5_patch.cpp  _7x8.cpp  _7x8_patch.cpp  _8x7.cpp
src/cpp/util/: FastBitSet.cpp
src/diagnostics/: test_captures.py  test_value_head_cnn.py
src/env/: BitBoardEnv.py  BoardEnv.py
src/gameSimulation/: arena.py  randomVSrandom.py  simulation.py
src/models/: BitNet.py  Net.py  PatchNet.py
src/notebooks/: analysis_board_ab.ipynb
src/rewards/: reward.py
src/train/: AlphaZeroBitTrain.py  AlphaZeroTrain.py  MCTStrain.py
src/ui/: play.html  play_server.py  script.js  simulation.html  style.css
src/util/: TimeProfile.py
